<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/size_4"
    android:background="@drawable/bg_border_stroke_white_6_50_per"
    android:paddingHorizontal="@dimen/size_16"
    android:paddingBottom="@dimen/size_16"
    android:paddingTop="@dimen/size_10">

    <TextView
        android:id="@+id/tvSummaryName"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_50"
        android:background="@drawable/bg_border_blue_100"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/t"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10"
        android:fontFamily="@font/bold"
        android:text="@string/tr_n_th_b"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSummaryName"
        app:layout_constraintTop_toTopOf="@id/tvSummaryName" />

    <TextView
        android:id="@+id/tvOrderId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10"
        android:fontFamily="@font/regular"
        android:text="@string/dh001235"
        android:textColor="@color/azure_34"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toEndOf="@id/tvSummaryName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvCurrentChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_12"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/c_m_n_anh_t_i_nh_n_c_h_ng_r_i"
        app:layout_constraintStart_toEndOf="@id/tvSummaryName"
        app:layout_constraintTop_toBottomOf="@id/tvOrderId" />
</androidx.constraintlayout.widget.ConstraintLayout>