<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginTop="@dimen/size_20"
        android:fontFamily="@font/medium"
        android:text="@string/name"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="@dimen/size_60"
        android:layout_marginHorizontal="@dimen/size_20"
        android:layout_marginTop="@dimen/size_20"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:fontFamily="@font/medium"
        android:hint="@string/hint_name"
        android:textCursorDrawable="@drawable/text_cursor_custom"
        android:textSize="@dimen/font_18" />

    <TextView
        android:id="@+id/tv_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_20"
        android:layout_marginTop="@dimen/size_20"
        android:fontFamily="@font/regular"
        android:text="@string/policy"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input" />

    <FrameLayout
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_margin="@dimen/size_20"
        android:background="@drawable/bg_button_green"
        android:elevation="@dimen/size_4"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            android:textStyle="bold" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>